--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 
   <artifactId>maven-dependency-analyzer</artifactId>
   <packaging>jar</packaging>
-  <version>1.11.2-hubspot-SNAPSHOT</version>
+  <version>1.11.2-SNAPSHOT</version>
 
   <name>Apache Maven Dependency Analyzer</name>
   <description>
