--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 
   <artifactId>maven-dependency-analyzer</artifactId>
   <packaging>jar</packaging>
-  <version>1.11.2-SNAPSHOT</version>
+  <version>1.11.2-hubspot-SNAPSHOT</version>
 
   <name>Apache Maven Dependency Analyzer</name>
   <description>
@@ -60,7 +60,7 @@
 
   <properties>
     <mavenVersion>2.0.5</mavenVersion>
-    <javaVersion>7</javaVersion>
+    <javaVersion>8</javaVersion>
   </properties>
 
   <dependencyManagement>
